hphp/hack/test/typecheck/switch_local_type_change_after_break3.php.exp
File "switch_local_type_change_after_break3.php", line 17, characters 9-19:
  int
File "switch_local_type_change_after_break3.php", line 19, characters 9-19:
  string
File "switch_local_type_change_after_break3.php", line 23, characters 3-13:
  (int | string)
File "switch_local_type_change_after_break3.php", line 25, characters 10-11:
Invalid return type (Typing[4110])
File "switch_local_type_change_after_break3.php", line 12, characters 22-24:
Expected int
File "switch_local_type_change_after_break3.php", line 18, characters 14-19:
But got string
